--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Remanente/DashBoard.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Remanente/DashBoard.cshtml
@@ -51,7 +51,7 @@
                                 </select>
                             </div>
                         </div>
-                     
+
                         @*Remanenten General*@
                         <div class="row clearfix blockquote blockquote-info btn-round">
                             <div class="table-responsive">
@@ -68,7 +68,49 @@
                                             <td><strong>Rema (%)</strong></td>
                                         </tr>
                                     </thead>
-                                    <tbody></tbody>
+                                    <tbody>
+                                        <tr>
+                                            <td>0</td>
+                                            <td>33,375</td>
+                                            <td>25,503</td>
+                                            <td>452</td>
+                                            <td>143,733</td>
+                                            <td>148,972</td>
+                                            <td>-5,239</td>
+                                            <td>-20.54%</td>
+                                        </tr>
+                                        <tr>
+                                            <td>33,375</td>
+                                            <td>71,555</td>
+                                            <td>49,533</td>
+                                            <td>1,030</td>
+                                            <td>157,305</td>
+                                            <td>169,005</td>
+                                            <td>-11,700</td>
+                                            <td>-23.62%</td>
+                                        </tr>
+                                        <tr>
+                                            <td>33,375</td>
+                                            <td>71,555</td>
+                                            <td>69,316</td>
+                                            <td>1,460</td>
+                                            <td>137,092</td>
+                                            <td>149,119</td>
+                                            <td>-12,027</td>
+                                            <td>-17.35%</td>
+                                        </tr>
+                                        <tr>
+                                            <td>33,375</td>
+                                            <td>71.555</td>
+                                            <td>88,721</td>
+                                            <td>1,842</td>
+                                            <td>117,305</td>
+                                            <td>130,328</td>
+                                            <td>-13,023</td>
+                                            <td>-14.68%</td>
+                                        </tr>
+                                    
+                                    </tbody>
                                 </table>
                             </div>
                         </div>
@@ -101,6 +143,7 @@
                                 <table class="table table-striped table-hover">
                                     <thead>
                                         <tr>
+                                            <td><strong>Nombre</strong></td>
                                             <td><strong>01</strong></td>
                                             <td><strong>02</strong></td>
                                             <td><strong>03</strong></td>
@@ -135,8 +178,27 @@
                                         </tr>
                                     </thead>
                                     <tbody>
-                                       
-                                    </tbody>
+                                        <tr>
+                                            <td>Camionetas</td>
+                                            <td>524</td>
+                                            <td>476</td>
+                                            <td>432</td>
+                                            <td>339</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Pipas</td>
+                                            <td>441.44</td>
+                                            <td>403.68</td>
+                                            <td>328.44</td>
+                                            <td>3687</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Islas</td>
+                                            <td>23.5116</td>
+                                            <td>32.0544</td>
+                                            <td>26.6112</td>
+                                            <td>17.3502</td>
+                                        </tr>                                        
                                 </table>
                             </div>
                         </div>
