--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/EditorTemplates/CentroCostoDTO.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/EditorTemplates/CentroCostoDTO.cshtml
@@ -1,5 +1,5 @@
 ﻿@model MVC.Presentacion.Models.Catalogos.CentroCostoDTO
-
+@Html.HiddenFor(m => m.IdCAlmacenGas)
 <tr>
     <td>@Model.Empresa </td>
     <td>@Model.Numero </ td >
