--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/header_buscar_cliente.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/header_buscar_cliente.xml
@@ -38,7 +38,7 @@
             android:layout_marginRight="15dp"
             android:layout_marginBottom="5dp">
 
-            <Button
+            <!--<Button
                 android:id="@+id/BtnBuscarClienteActivityNo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -49,7 +49,8 @@
                 android:text="@string/label_no"
                 android:textColor="@color/colorTextButtonLogin"
                 android:textSize="30sp"
-                tools:ignore="ButtonStyle,UnusedAttribute" />
+                tools:ignore="ButtonStyle,UnusedAttribute"
+                android:layout_marginRight="5dp" />-->
 
             <Button
                 android:id="@+id/BtnBuscarClienteActivitySi"
@@ -59,10 +60,12 @@
                 android:layout_weight="1"
                 style="@style/SagasTheme.Button"
                 android:background="@drawable/ripple_effect"
-                android:text="@string/label_si"
+                android:text="@string/registrar"
                 android:textColor="@color/colorTextButtonLogin"
                 android:textSize="30sp"
-                tools:ignore="ButtonStyle,UnusedAttribute" />
+                tools:ignore="ButtonStyle,UnusedAttribute"
+                android:layout_marginLeft="5dp" />
+            <!--  android:text="@string/label_si"-->
         </TableRow>
 
     </TableLayout>
