--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_punto_venta_solicitar.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_punto_venta_solicitar.xml
@@ -27,7 +27,7 @@
                 android:textAlignment="center"
                 android:textSize="18sp" />
 
-            <TextView
+            <!--<TextView
                 android:id="@+id/TVPuntoVentaActivityEnCasoTitulo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -38,9 +38,9 @@
                 android:paddingBottom="5dp"
                 android:text="@string/en_caso_de_negativa_del_cliente"
                 android:textAlignment="center"
-                android:textSize="18sp" />
+                android:textSize="18sp" />-->
 
-            <Button
+            <!--<Button
                 android:id="@+id/BtnPuntoVentaSolicitarActivitySeguirSinNumero"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -51,7 +51,7 @@
                 android:text="@string/seguir_sin_numero"
                 android:textColor="@color/colorTextButtonLogin"
                 android:textSize="14sp"
-                tools:ignore="UnusedAttribute" />
+                tools:ignore="UnusedAttribute" />-->
 
             <TextView
                 android:id="@+id/TVPuntoVentaSolicitarActivityRegistroTitulo"
