--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/OrdenCompraComplementoGas.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/OrdenCompraComplementoGas.cshtml
@@ -525,10 +525,19 @@
                                                     <div class="col-md-6">
                                                         <div class="form-group">
                                                             <select name="OrdenCompraExpedidor.Iva" id="IVAExpedidor" class="form-control" data-live-search="true" onchange="javascript: CalcularImporteExpedidor()">
-                                                                @foreach (var item in ViewBag.IVAs)
-                                                                {
-                                                                    <option value="@item.Value">@item.Text</option>
-                                                                }
+                                                               
+                                                                    @foreach (var item in ViewBag.IVAs)
+                                                                    {
+                                                                        if (ViewBag.Complemeto.OrdenCompraExpedidor.Iva.ToString() == item.Value)
+                                                                        {
+                                                                            <option value="@item.Value" selected>@item.Text</option>
+                                                                        }
+                                                                        else
+                                                                        {
+                                                                            <option value="@item.Value">@item.Text</option>
+                                                                        }
+                                                                    }
+                                                                   
                                                             </select>
                                                             @Html.ValidationMessageFor(m => m.OrdenCompraExpedidor.Iva, "", new { @class = "alert-danger" })
                                                         </div>
@@ -619,15 +628,8 @@
                                                     </div>
                                                     <div class="col-md-4">
                                                         <div class="form-group">
-                                                            @if (ViewBag.Complemeto.OrdenCompraPorteador.FactorConvTransporte != null)
-                                                            {
-                                                                @*<input type="text" name="FactorConvTransporte" class="form-control" value="@((ViewBag.Complemeto==null)?"":ViewBag.Complemeto.OrdenCompraPorteador.FactorConvTransporte)" />*@
-                                                                @Html.TextBoxFor(m => m.OrdenCompraPorteador.FactorConvTransporte, new { @class = "form-control", @onchange = "javascript: CalcularImportePortador()" })
-                                                            }
-                                                            else
-                                                            {
-                                                                @Html.TextBoxFor(m => m.OrdenCompraPorteador.FactorConvTransporte, new { @class = "form-control", @onchange = "javascript: CalcularImportePortador()" })
-                                                            }
+                                                           @Html.TextBoxFor(m => m.OrdenCompraPorteador.FactorConvTransporte, new { @class = "form-control", @onchange = "javascript: CalcularImportePortador()" })
+                                                          
                                                             @Html.HiddenFor(m => m.OrdenCompraPorteador.FactorConvTransporte)
                                                             @Html.ValidationMessageFor(m => m.OrdenCompraPorteador.FactorConvTransporte, "", new { @class = "alert-danger" })
                                                         </div>
@@ -639,16 +641,8 @@
                                                     </div>
                                                     <div class="col-md-4 text-right">
                                                         <div class="form-group">
-                                                            $
-                                                            @if (ViewBag.Complemeto.OrdenCompraPorteador.PrecioTransporte != null)
-                                                            {
-                                                                @*<label name="PrecioTransporte" class="form-control" value="@((ViewBag.Complemeto==null)?"":ViewBag.Complemeto.OrdenCompraPorteador.PrecioTransporte)" />*@
-                                                                @Html.LabelFor(m => m.OrdenCompraPorteador.PrecioTransporte, new { id = "PrecioTransporte" })
-                                                            }
-                                                            else
-                                                            {
-                                                                @Html.LabelFor(m => m.OrdenCompraPorteador.PrecioTransporte, new { id = "PrecioTransporte" })
-                                                            }
+                                                            $ @Html.LabelFor(m => m.OrdenCompraPorteador.PrecioTransporte, new { id = "PrecioTransporte" })
+                                                            
                                                             @Html.HiddenFor(m => m.OrdenCompraPorteador.PrecioTransporte)
                                                             @Html.ValidationMessageFor(m => m.OrdenCompraPorteador.PrecioTransporte, "", new { @class = "alert-danger" })
                                                         </div>
@@ -663,15 +657,8 @@
                                                     </div>
                                                     <div class="col-md-4">
                                                         <div class="form-group">
-                                                            @if (ViewBag.Complemeto.OrdenCompraPorteador.Casetas != null)
-                                                            {
-                                                                @*<label name="Casetas" class="form-control" value="@((ViewBag.Complemeto==null)?"":ViewBag.Complemeto.OrdenCompraPorteador.Casetas)" />*@
-                                                                @Html.TextBoxFor(m => m.OrdenCompraPorteador.Casetas, new { @class = "form-control", @onchange = "javascript: CalcularImportePortador()" })
-                                                            }
-                                                            else
-                                                            {
-                                                                @Html.TextBoxFor(m => m.OrdenCompraPorteador.Casetas, new { @class = "form-control", @onchange = "javascript: CalcularImportePortador()" })
-                                                            }
+                                                            @Html.TextBoxFor(m => m.OrdenCompraPorteador.Casetas, new { @class = "form-control", @onchange = "javascript: CalcularImportePortador()" })
+                                                            
                                                             @Html.HiddenFor(m => m.OrdenCompraPorteador.Casetas)
                                                             @Html.ValidationMessageFor(m => m.OrdenCompraPorteador.Casetas, "", new { @class = "alert-danger" })
                                                         </div>
@@ -729,8 +716,7 @@
                                                         
                                                         @if (ViewBag.Complemeto.OrdenCompraPorteador.Total != null)
                                                         {
-                                                            @*<label name="Total" class="form-control" value="@((ViewBag.Complemeto==null)?"":ViewBag.Complemeto.OrdenCompraPorteador.Total)" />*@
-                                                            @Html.LabelFor(m => m.OrdenCompraPorteador.Total, new { id = "ImportePorteador" })
+                                                            @Html.LabelFor(m => m.OrdenCompraPorteador.Total)
                                                         }
                                                         else
                                                         {
